preview-environment-setup/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pr-#{System.PullRequest.PullRequestNumber}#
